--- a/paisajes.html
+++ b/paisajes.html
@@ -14,26 +14,35 @@
         <nav>
           <ul>
             <li><a href="retratos.html">Retratos</a></li>
-            <li><a href="paisajes.html">Paisajes</a></li>
-            <li><a href="index.html" class="active">Inicio</a></li>
+            <li><a href="paisajes.html" class="active">Paisajes</a></li>
+            <li><a href="index.html">Inicio</a></li>
           </ul>
         </nav>
       <!-- </section> -->
     </header>
     <div id="contenido">
-      <div id="contenedorPrincipal">
-        <img id="imagenCentral" src="imagenes/imagenCentral.jpg" alt="Imagen Central">
-      </div>
-      <div id="contenedorSecundario">
-        <div class="c1">
-          <img id="paisaje"src="imagenes/paisaje.jpg" alt="Paisaje">
-          <a href="paisajes.html">Paisajes</a>
-        </div>
-        <div class="c2">
-          <img id="retrato"src="imagenes/retrato.jpg" alt="Retrato">
-          <a href="retratos.html">Retratos</a>
-        </div>
-      </div>
+      <section id="primeraFila" class="contenedor">
+  			<div>
+  				<img id="imagen1" class="imagen" src="imagenes/paisaje.jpg" alt="Paisaje">
+  			</div>
+  			<div>
+  				<img id="imagen2" class="imagen" src="imagenes/paisaje.jpg" alt="Paisaje">
+  			</div>
+  			<div>
+  				<img id="imagen3" class="imagen" src="imagenes/paisaje.jpg" alt="Paisaje">
+  			</div>
+      </section>
+      <section id="segundaFila" class="contenedor">
+        <div>
+  				<img id="imagen4" class="imagen" src="imagenes/paisaje.jpg" alt="Paisaje">
+  			</div>
+        <div>
+  				<img id="imagen5" class="imagen" src="imagenes/paisaje.jpg" alt="Paisaje">
+  			</div>
+        <div>
+  				<img id="imagen6" class="imagen" src="imagenes/paisaje.jpg" alt="Paisaje">
+  			</div>
+  		</section>
     </div>
     <footer>
       <div id="contacto">
