Se agregaron los Media Querys, animation y algunas modificaciones

--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
+	   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comenzando con la fotografía</title>
     <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
     <header>
-      <!-- <section> -->
         <aside>
           Comenzando con la fotografía
         </aside>
         <nav>
           <ul>
-            <li><a href="retratos.html">Retratos</a></li>
-            <li><a href="paisajes.html">Paisajes</a></li>
             <li><a href="index.html" class="active">Inicio</a></li>
+            <li><a href="paisajes.html">Paisajes</a></li>
+            <li><a href="retratos.html">Retratos</a></li>
           </ul>
         </nav>
-      <!-- </section> -->
+        <div class="corte"></div>
     </header>
     <div id="contenido">
       <div id="contenedorPrincipal">
@@ -53,7 +53,7 @@
         Google+
       </div>
       <div id="derechos">
-        <b>Derechos</b><br>
+        <b>&copy; Derechos</b><br>
         Mauricio Limarino <br>
         CopyRight 2017
       </div>
