--- a/paisajes.html
+++ b/paisajes.html
@@ -7,18 +7,17 @@
   </head>
   <body>
     <header>
-      <!-- <section> -->
         <aside>
           Comenzando con la fotografía
         </aside>
         <nav>
           <ul>
-            <li><a href="retratos.html">Retratos</a></li>
-            <li><a href="paisajes.html" class="active">Paisajes</a></li>
             <li><a href="index.html">Inicio</a></li>
+            <li><a href="paisajes.html" class="active">Paisajes</a></li>
+            <li><a href="retratos.html">Retratos</a></li>
           </ul>
         </nav>
-      <!-- </section> -->
+        <div class="corte"></div>
     </header>
     <div id="contenido">
       <section id="primeraFila" class="contenedor">
